--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,13 @@ android {
         applicationId "sventrapopizz.amoledblackthemeshowcase"
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 52
-        versionName "1.1.52"
+        versionCode 53
+        versionName "1.1.53"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
