--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,15 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.google.gms:google-services:4.3.10'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -16,10 +20,18 @@ buildscript {
     }
 }
 
+ext {
+    compileSdkVersion = 32
+}
+
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
